styles/typography.css
/* ... */
code {
  white-space: initial;
}
pre code {
  margin: var(--line-height);
  font-size:  var(--smaller);
}
header code, h1 code {
  font-variant-caps: initial;
}

figcaption {
  font-size: 86%;
  font-style: italic;
}

/* quotes */
q {
  font-style: italic;
  vertical-align: top;
  -webkit-box-decoration-break: clone;
  box-decoration-break: clone;
   /*
    - https://tympanus.net/codrops/css_reference/quotes/
    - https://developer.mozilla.org/en-US/docs/Web/CSS/quotes
  */
  quotes:
    "\201C" "\201D"
    "\2018" "\2019"

    "\201C" "\201D"
    "\2018" "\2019"

    "\201C" "\201D"
    "\2018" "\2019"
  ;


/* Two pairs: */
  quotes: ““” “”” “‘” “’”;
}
q q {
}
p q, q q {
  font-size: var(--smaller);
  padding-inline-end: initial;
  padding-inline-start: initial;
}

q::before
  {}
q::after
  { content: close-quote }

/*
  - http://webtypography.net/2.3.3
  - https://isotropic.co/the-best-css-styling-for-blockquotes/
  - https://css-tricks.com/snippets/css/simple-and-nice-blockquote-styling/
*/
blockquote {
  /* http://webtypography.net/2.3.3 */
  opacity: 85%;
  font-style: italic;
  padding-block-start: 3ch;
  padding-block-end: 1.682ch;
  quotes: "\201C""\201D";
  border: 0.01618em solid;
  margin: var(--p-margin);
  font-size: var(--larger);
  margin-block-start: var(--line-height);
}
blockquote::before {
  top: 1ch;
  left: 2ch;
  /* width: 100%; */
  opacity: 80%;
  line-height: 1.6182ch;
  position: relative;
  content: open-quote;
  overflow: hidden;
  /* background: pink; */
  display: block;
  width: 1ch;
  height: 1ch;
  text-align: start;
  transform: scale(8);
}
blockquote::after {
  opacity: 40%;
  content: '⤷\2002' attr(cite);
}
blockquote p {
  text-align: start;
}
cite {
  opacity: 75%;
  font-size: var(--smaller);
  white-space: nowrap;
  display: inline-flex;
}
cite::before{
  content: '-'; /* https://en.wikipedia.org/wiki/Dash */
}
blockquote cite, q cite {}
blockquote::after, blockquote cite {
  display: block;
  text-align: end;
  font-size: var(--larger);
  margin: var(--margin-collapse-bugfix) 1.6821ch;
  padding: var(--margin-collapse-bugfix) 1.6821ch;
}
blockquote cite {
}
blockquote cite::before {
  content: normal;
}
q cite {
  max-width: 21ch;
  overflow: hidden;
  vertical-align: middle;
  text-overflow: ellipsis;
  font-size: var(--smallest);
}

small
  { font-size: var(--smaller) }

sub, sup { /* Prevent `sub` and `sup` elements from affecting the line height in all browsers. */vertical-align: unset;}
sup {
  position: relative;
  top: -.418em;
}
sub {
  position: relative;
  top: 0.418em;
}

svg
 { vertical-align: middle }

address {}

/* Table styling
 */
table {}
caption {
  padding: 1em 0;
  font-weight: bold;
  background: Canvas;
  font-size: var(--larger);
  line-height: var(--largest);
}


/* details */
details {
  margin: var(--margin);
  text-align: var(--text-align);
  padding: 0 0 0 var(--line-height);
}
nav details, nav summary {
  margin: 0;
  padding: 0;
}
body > header details
  { padding-left: 0 }
nav  details {
  /* display: list-item; */
  list-style-type: '😕';
}
nav > details[open] {
  list-style-type: '😊';
}

/* summary */

summary {
  font-weight: bolder;
  padding-bottom: 0.618em;
  font-size: var(--larger);
  margin-left: -1.618em /* compensate for <details> padding */;
}
details > summary
{
  margin-left: 0;
  text-align: start;
}

/* fieldset / legend */
fieldset
  { }
legend {
  font-weight: bold;
  margin: var(--margin);
  font-size: var(--larger);
  padding: var(--margin-collapse-bugfix) var(--line-height);
}

